--- a/package.json
+++ b/package.json
@@ -39,34 +39,34 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "commander": "^11.0.0",
-    "inquirer": "^9.2.0",
-    "ssh2": "^1.14.0",
-    "node-ssh": "^13.1.0",
-    "ora": "^7.0.1",
+    "blessed": "^0.1.81",
+    "boxen": "^7.1.0",
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.3",
-    "boxen": "^7.1.0",
+    "commander": "^11.0.0",
     "conf": "^11.0.1",
-    "winston": "^3.10.0",
-    "blessed": "^0.1.81"
+    "inquirer": "^9.3.7",
+    "node-ssh": "^13.1.0",
+    "ora": "^7.0.1",
+    "ssh2": "^1.14.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.0",
-    "@types/node": "^20.0.0",
-    "@types/inquirer": "^9.0.0",
-    "@types/ssh2": "^1.11.0",
     "@types/blessed": "^0.1.21",
-    "jest": "^29.7.0",
+    "@types/inquirer": "^9.0.8",
     "@types/jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "eslint": "^8.52.0",
+    "@types/node": "^20.0.0",
+    "@types/ssh2": "^1.11.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
-    "prettier": "^3.0.0",
-    "ts-node": "^10.9.0",
+    "eslint": "^8.52.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.0",
-    "rimraf": "^5.0.0"
+    "prettier": "^3.0.0",
+    "rimraf": "^5.0.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.2.0"
   },
   "files": [
     "dist/",
