--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,6 @@ colored = "2.0"
 dirs = "5.0"
 figlet-rs = "0.1.5"
 url = "2.5.4"
+reqwest = { version = "0.11", features = ["json"] }
+base64 = "0.21"
+bs58 = "0.5"
