--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,10 @@ reqwest = { version = "0.11", features = ["json"] }
 base64 = "0.21"
 bs58 = "0.5"
 socket2 = "0.5"
+solana-client = "1.18"
+solana-sdk = "1.18"
+solana-rpc-client-api = "1.18"
+chrono = "0.4"
+ctrlc = "3.4"
+ratatui = "0.26"
+futures = "0.3"
