--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ matrix.rust }}
-          components: rustfmt, clippy
+          components: rustfmt
       
       - name: Cache cargo registry
         uses: actions/cache@v3
@@ -49,9 +49,6 @@ jobs:
         run: cargo fmt -- --check
         continue-on-error: true
       
-      - name: Run clippy
-        run: cargo clippy -- -W clippy::all
-        continue-on-error: true
       
       - name: Run tests
         run: cargo test --verbose
