--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ clap = { version = "4.4", features = ["derive"] }
 inquire = "0.7"
 comfy-table = "7.1"
 openssh = { version = "0.10", features = ["native-mux"] }
+openssl = { version = "0.10", features = ["vendored"] }
 openssh-sftp-client = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -33,7 +34,7 @@ colored = "2.0"
 dirs = "5.0"
 figlet-rs = "0.1.5"
 url = "2.5.4"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
 base64 = "0.21"
 bs58 = "0.5"
 socket2 = "0.5"
