--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ inquire = "0.7"
 comfy-table = "7.1"
 openssh = { version = "0.10", features = ["native-mux"] }
 openssl = { version = "0.10", features = ["vendored"] }
+openssl-sys = { version = "0.9", features = ["vendored"] }
 openssh-sftp-client = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
