feat: implement comprehensive monitoring for SSH, RPC, and delinquency failures
- Add SSH failure tracking with configurable thresholds (5 failures or 60 seconds)
- Add RPC failure tracking with configurable thresholds (10 failures or 30 seconds)
- Fix critical bug where RPC failures caused false delinquency alerts by losing vote timestamps
- Enhance delinquency alerts to include SSH and RPC connection status
- Add FailureTracker and NodeHealthStatus types for comprehensive health monitoring
- Add new alert methods: send_ssh_failure_alert, send_rpc_failure_alert, send_delinquency_alert_with_health
- Update config with new threshold settings for SSH and RPC failures
- Add comprehensive test suite covering all failure scenarios
- Preserve vote slot timestamps when RPC fails to prevent false alerts

This helps validators distinguish between connectivity issues (SSH/RPC) and actual validator problems, significantly reducing false alarms and improving diagnostics.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -63,6 +63,10 @@ validators:
 alert_config:
   enabled: true
   delinquency_threshold_seconds: 30 # Alert after 30 seconds without voting
+  ssh_failure_threshold_seconds: 60 # Alert after 60 seconds of SSH failures
+  rpc_failure_threshold_seconds: 30 # Alert after 30 seconds of RPC failures
+  ssh_failure_count_threshold: 5    # Alert after 5 consecutive SSH failures
+  rpc_failure_count_threshold: 10   # Alert after 10 consecutive RPC failures
 
   # Telegram configuration (optional)
   # To set up Telegram alerts:
