fix: correct switch time to 1-2 seconds in documentation
- Update README title and description to show accurate 1-2 second switch time
- Update Cargo.toml description to reflect actual performance
- Fix "Why SVS" section to show correct timing

The actual switch time is 1-2 seconds, not 25-40 seconds.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "solana-validator-switch"
 version = "1.2.8"
 edition = "2021"
-description = "Professional-grade CLI tool for ultra-fast Solana validator switching"
+description = "Ultra-fast Solana validator switching CLI tool - 1-2 second switches with real-time monitoring"
 authors = ["huisky <huiskylabs@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/huiskylabs/solana-validator-switch"
